# basalt_competition_baseline_submissions

./: .gitmessage  Custom_Game_AI_Adaptation_Guide.md  MODEL_LOCATIONS.md  README.md  README_GAME_AI.md  apt.txt  game_ai_trainer.py  main.py  pyproject.toml  requirements.txt  setup_game_ai.py  test_system.py  uv_setup_guide.md  x11_game_env.py
