[project]
name = "basalt-competition-baseline-submissions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "minerl",
    "crowdai_api",
    "aicrowd-repo2docker",
    "coloredlogs",
    "matplotlib",
    "namesgenerator",
    "torchvision",
    "pyro4",
    "opencv-python"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = []
